--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
+      "@types/bcrypt": "^3.0.0",
+      "@types/cookie": "^0.4.0",
+      "@types/cookie-parser": "^1.4.2",
+      "@types/jsonwebtoken": "^8.5.0",
       "@types/node": "^14.14.14",
       "nodemon": "^2.0.6",
       "ts-node": "^9.1.1",
@@ -11,8 +15,14 @@
    "dependencies": {
       "@types/express": "^4.17.9",
       "@types/morgan": "^1.9.2",
+      "bcrypt": "^5.0.0",
+      "class-transformer": "^0.3.1",
       "class-validator": "^0.12.2",
+      "cookie": "^0.4.1",
+      "cookie-parser": "^1.4.5",
+      "dotenv": "^8.2.0",
       "express": "^4.17.1",
+      "jsonwebtoken": "^8.5.1",
       "morgan": "^1.10.0",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.10",
