--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
       "typescript": "^4.1.3"
    },
    "dependencies": {
+      "@types/cors": "^2.8.9",
       "@types/express": "^4.17.9",
       "@types/morgan": "^1.9.2",
       "bcrypt": "^5.0.0",
@@ -20,6 +21,7 @@
       "class-validator": "^0.12.2",
       "cookie": "^0.4.1",
       "cookie-parser": "^1.4.5",
+      "cors": "^2.8.5",
       "dotenv": "^8.2.0",
       "express": "^4.17.1",
       "jsonwebtoken": "^8.5.1",
@@ -31,7 +33,6 @@
    "scripts": {
       "start": "ts-node src/server.ts",
       "dev": "nodemon --exec ts-node src/server.ts",
-      "typeorm": "ts-node   ./node_modules/typeorm/cli.js"    
-
+      "typeorm": "ts-node   ./node_modules/typeorm/cli.js"
    }
 }
