--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@svgr/webpack": "^5.5.0",
     "autoprefixer": "^10.1.0",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
